# langdetectpp

./: .gitmodules  CMakeLists.txt
cmake/ntc/: CMakeLists.txt  ntc-target-helpers.cmake
langdetectpp/: CMakeLists.txt
langdetectpp/include/langdetectpp/: Detector.h  Language.h
langdetectpp/src/: Detector.cpp  Language.cpp
langdetectpp/src/detection/: DetectionRunner.cpp  DetectionRunner.h  DetectorImpl.h
langdetectpp/src/ngrams/: ExtractedNGrams.h  NGramExtractor.cpp  NGramExtractor.h
langdetectpp/src/profiles/: Profile.cpp  Profile.h  ProfileGroup.cpp  ProfileGroup.h
langdetectpp/src/util/: CircleArray.h  misc.h  stats.h
tests/: CMakeLists.txt
tests/src/: tests.cpp
